# Engine2D

./: .gitignore  CMakeLists.txt  engine2k.config.json  imgui.ini  vcpkg.json
apidoc/: apidoc.lua  index.html  ldoc.css
assets/animations/: fire.json
assets/particlesystems/: bjarne.json  mantis.json  nojava.json
assets/scenes/: assets.json
assets/scripts/: clock.lua  entityspawner.lua  spritesheettest.lua  test01.lua  test02.lua
assets/shaders/: debug.frag  default.frag  default.vert
assets/spritesheets/: icons.json
src/Demo/: Demo.cpp  Demo.hpp  Main.cpp
src/Engine2D/: Animation.hpp  Application.cpp  Application.hpp  Application.inc  ApplicationContext.cpp  ApplicationContext.hpp  AssetDatabase.cpp  AssetDatabase.hpp  AssetDescription.cpp  AssetDescription.hpp  AssetList.cpp  AssetList.hpp  BoostJsonInclude.cpp  BufferedScriptCommand.hpp  BufferedScriptCommands.cpp  Color.hpp  Component.hpp  ComponentHolder.hpp  ComponentHolderPairIterator.hpp  Config.hpp  Entity.hpp  FileUtils.cpp  FileUtils.hpp  GLDataUsagePattern.hpp  GUID.cpp  GUID.hpp  GlUtils.cpp  GlUtils.hpp  Image.cpp  Image.hpp  IncludeGLM.hpp  IncludeImGuiInternal.hpp  Input.cpp  Input.hpp  Iterators.hpp  JSONUtils.hpp  OpenGLVersion.hpp  ParticleSystem.cpp  ParticleSystem.hpp  ParticleSystemJSONTypes.inc  (+45 more)
src/Engine2D/EntityUtils/: EntityUtils.cpp  EntityUtils.hpp
src/Engine2D/FileUtils/: FileUtils.cpp  FileUtils.hpp
src/Engine2D/Hash/: Hash.cpp  Hash.hpp
src/Engine2D/ImGuiUtils/: Bezier.cpp  Bezier.hpp  ColorGradient.cpp  ColorGradient.hpp
src/Engine2D/JSON/: JSON.cpp  JSON.hpp  MacroDefinitions.hpp  Parsers.cpp  Parsers.hpp
src/Engine2D/MathUtils/: MathUtils.cpp  MathUtils.hpp
src/Engine2D/ScriptUtils/: ScriptUtils.cpp  ScriptUtils.hpp
src/FlappyBird/: FlappyBird.cpp  FlappyBird.hpp  Main.cpp
src/FlappyBird/assets/: assets.json
src/FlappyBird/assets/particlesystems/: fireworks.json
src/FlappyBird/assets/scripts/: AssetGUIDs.lua  BackgroundLayer.lua  Bird.lua  CheatMode.lua  FireworksContainer.lua  Game.lua  GameState.lua  Main.lua  NumberDisplay.lua  Pipes.lua  Utility.lua  flappy_bird.lua  flappy_bird_guids.lua  flappy_bird_types.lua
src/FlappyBird/assets/spritesheets/: bird.json  bird.tps  digits.json  digits.tps
src/PartED/: Main.cpp  PartED.cpp  PartED.hpp  PartEDProject.hpp
src/Pong/: Main.cpp  Pong.cpp  Pong.hpp
src/Pong/assets/: assets.json
src/Pong/assets/scripts/: pong.lua
src/Sandbox/: Sandbox.cpp  Sandbox.hpp  main.cpp
src/Viped/: ColorVariantSelector.hpp  FourWayVariantSelector.hpp  FourWayVariantSelectorVec2.hpp  Main.cpp  OptionalBezierCurveSelector.hpp  OptionalColorGradientSelector.hpp  TwoWayVariantSelector.hpp  Utility.cpp  Utility.hpp  Viped.cpp  Viped.hpp  VipedProject.hpp
tests/: CMakeLists.txt  ComponentHolder.test.cpp  GUID.test.cpp  JSON.test.cpp  Main.test.cpp  Registry.test.cpp  SparseSet.test.cpp  TypeErasedVector.test.cpp  spritesheet_test.json
tools/jsonMacroGenerator/: jsonMacroGenerator.py  macroOutput.hpp
